--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 <!--scroll to button-->
 
 <a href="#home" class="top">
-    <img src="g:\project\Personal Potfolio Website project\potfolio\uparrow.png" alt="">
+    <img src="uparrow.png" alt="">
 </a>
 
 
