--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <h3>HI THERE !</h3>
         <h1>I'm <span>Arpita Wabale</span></h1>
         <p> Hi, I'm Arpita Wabale, I am recent completed my graduation in BBA(Computer Application).
-            I have a basic understanding of business, computers, and software. I understand  some 
+            I have a basic understanding of computers, and software. I understand  some 
             pogramming lenguages like HTML, CSS, Javascript, PHP, Python and Java. I am ready to start my
             career. I am looking for a job where I can use my skills and grow professionally.</p>
             <p class="work">open to work</p>
